- able to create new tabs in program by selecting "+" tab
	code source - combination of two:
	https://msdn.microsoft.com/en-us/library/aa984280%28v=vs.71%29.aspx
	left justifies new tab
	http://stackoverflow.com/questions/6738126/winforms-tabcontrol-add-new-tab-button
- cleaned out some garbage old functions
	- problem: removing the code that's still referenced crashes the Form1.design
	- soln: go to the properties/events, find where the code is referenced, delete it there
		- then delete the code itself in the main form
- autoresize forms using "Dock"
	http://stackoverflow.com/questions/1636280/automatic-resizing-of-the-windows-forms-controls
- added a function for the "maximize" event
	source: https://social.msdn.microsoft.com/Forums/en-US/d0af9856-a892-4030-abff-a550847df3a4/form-maximizeminimize-click-event?forum=winforms
- separated some parts of the class into different files:
	NotedumpMain.cs, Form1.cs (legacy), NotedumpMenuStrip.cs
	source (can extend partial class into multiple files using "partial" keyword):
	http://stackoverflow.com/questions/144783/c-sharp-classes-in-separate-files
- started implementing richtextbox
	- need to read and output file into box


2016.11.23
- working on file I/O
	- turning text file into a resource and accessing it as if it is on the file directory
		- alternative: text file resource is treated as string and can be directly loaded into richtextbox
		http://stackoverflow.com/questions/6428881/how-to-insert-a-string-into-a-richtextbox
	- todo: save richtextbox contents to resource
		- "Save All and Exit" flushes out content in active window and closes program
		- save as stream, output to resource?


2016.11.24
- moving to hardcoded tabs instead of dynamic tab system
- added richtextbox to all "sub"tabs by doubleclick


2016.11.25
- changed "+" tab event handler for Main, Music, and Links to single event handler
	- dynamic tab system is dead, code will remain for future use
- singular richtextbox event handler created